--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dragons Of Draezor - Gw2</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="css/imgs/gw2-logoblue.png" type="image/x-ixcon">
+    <link rel="shortcut icon" href="css/imgs/dd-logo1-sfundo.png" type="image/x-ixcon">
 </head>
 <body>
     <main id="main">
@@ -18,28 +18,28 @@
 
                 <nav class="nav">
                     <div class="nav-logo">
-                        <img class="img1" src="css/imgs/dd_wordlogo.jpg" alt="">
+                        <img class="img1" src="css/imgs/dd-logo1-sfundo.png" alt="">
                     </div>
 
                     <ul class="nav-itens">
                         <li class="nav-botao">Quem somos</li>
-                        <li class="nav-botao">WvW</li>
+                        <li class="nav-botao">World Vs World</li>
                         <li class="nav-botao">Junte-se a nós</li>
-                        <li>
-                            <a href="https://www.youtube.com/@dragonsofdraezor" target=”_blank”><img src="css/imgs/yt_logo.png" alt="" class="logo-discord"></a>
+                        <li class="nav-icon">
+                            <a href="https://www.youtube.com/@dragonsofdraezor" target=”_blank”><img src="css/imgs/yt_logo.png" alt="" class="logo-yt"></a>
                         </li>
-                        <li>
+                        <li class="nav-icon">
                             <a href="https://discord.gg/mUxBxHUzyq" target=”_blank”><img class="logo-discord" src="css/imgs/logo_discord.png" alt="" ></a>
                         </li>
-                        <li>
+                        <li class="nav-icon">
                             <a href="https://www.guildwars2.com/en/" target=”_blank”><img class="logo-gw2" src="css/imgs/gw2-logoblue.png" alt=""></a>
                         </li>
                     </ul>
                 </nav>
 
                 <div class="texto-conteudo-home">
-                    <h1> A maior guilda Brasileira de WvW do Gw2™!</h1>
-                    <p>Criada em meados de 2020, a guilda Dragons Of Draezor [DD] surgiu com o objetivo de unir os brasileiros que são apaixonados pelo pvp em grande escala. Venha fazer parte da maior guilda Brasil no WvW do Guild Wars 2. Recrutamento aberto, aceitamos novatos e experientes.</p>
+                    <h1> A MAIOR GUILDA BRASILEIRA DE WVW DO GW2™!</h1>
+                    <p>Criada em meados de 2020, a guilda Dragons Of Draezor [DD] surgiu com o objetivo de unir os brasileiros que são apaixonados pelo pvp em grande escala. Venha fazer parte da maior guilda brasileira no WvW do Guild Wars 2. Recrutamento aberto, aceitamos novatos e experientes.</p>
                 </div>
 
                 <div class="botoes">
