home-video terminado, adicionado outras divs

--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dragons Of Draezor - Gw2</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="css/imgs/dd-logo1-sfundo.png" type="image/x-ixcon">
+    <link rel="shortcut icon" href="css/imgs/dd_logo_semfundo.png" type="image/x-ixcon">
 </head>
 <body>
     <main id="main">
         <div class="page-home">
             <div class="home-video">
                 <video autoplay muted loop id="background-video">
-                    <source src="css/videos/trailer1DD-v3.mp4" type="video/mp4">
+                    <source src="css/videos/trailer1DD.mp4" type="video/mp4">
                     Seu navegador não suporta vídeo.
                 </video>
 
                 <nav class="nav">
                     <div class="nav-logo">
-                        <img class="img1" src="css/imgs/dd-logo1-sfundo.png" alt="">
+                        <img class="gw2-logo" src="css/imgs/gw2logo_blue.png" alt="">
+                        <!-- <img class="dd-logo" src="css/imgs/dd_logo_semfundo.png" alt=""> -->
                     </div>
 
                     <ul class="nav-itens">
                         <li class="nav-botao">Quem somos</li>
-                        <li class="nav-botao">World Vs World</li>
+                        <li class="nav-botao">WvW</li>
                         <li class="nav-botao">Junte-se a nós</li>
                         <li class="nav-icon">
                             <a href="https://www.youtube.com/@dragonsofdraezor" target=”_blank”><img src="css/imgs/yt_logo.png" alt="" class="logo-yt"></a>
@@ -31,9 +32,10 @@
                         <li class="nav-icon">
                             <a href="https://discord.gg/mUxBxHUzyq" target=”_blank”><img class="logo-discord" src="css/imgs/logo_discord.png" alt="" ></a>
                         </li>
-                        <li class="nav-icon">
+                        <img class="dd-logo" src="css/imgs/dd_logo_semfundo.png" alt="">
+                        <!-- <li class="nav-icon">
                             <a href="https://www.guildwars2.com/en/" target=”_blank”><img class="logo-gw2" src="css/imgs/gw2-logoblue.png" alt=""></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </nav>
 
@@ -43,17 +45,26 @@
                 </div>
 
                 <div class="botoes">
-                    <div class="botao-facaparte">FAÇA PARTE HOJE MESMO!</div>
+                    <div class="botao-facaparte">FAÇA PARTE DA DD HOJE MESMO!</div>
                     <div class="botao-saibamais"> SAIBA MAIS</div>
                 </div>
             </div>
-            <div class="videoaulas"></div>    
-            <div class="treinos"></div>    
-            <div class="vod-reviews"></div>    
-            <div class="guild-missions"></div>    
-            <div class="havoc-roam"></div>    
+
+            <div class="container cont-1">
+
+            </div>
+
+            <div class="container cont-2"></div>
+
+            <div class="container cont-3"></div>
+
+            <div class="container cont-4"></div>  
         </div>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <div class="logo">
+            <img class="dd-logo" src="css/imgs/dd_logo_semfundo.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
