--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Dragons Of Draezor - Gw2</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="css/imgs/dd_logo_semfundo.png" type="image/x-ixcon">
+    
 </head>
 <body>
     <main id="main">
         <div class="page-home">
+
             <div class="home-video">
+                <!-- Vídeo de fundo -->
                 <video autoplay muted loop id="background-video">
                     <source src="css/videos/trailer1DD.mp4" type="video/mp4">
                     Seu navegador não suporta vídeo.
@@ -19,13 +22,12 @@
                 <nav class="nav">
                     <div class="nav-logo">
                         <img class="gw2-logo" src="css/imgs/gw2logo_blue.png" alt="">
-                        <!-- <img class="dd-logo" src="css/imgs/dd_logo_semfundo.png" alt=""> -->
                     </div>
 
                     <ul class="nav-itens">
-                        <li class="nav-botao">Quem somos</li>
-                        <li class="nav-botao">WvW</li>
-                        <li class="nav-botao">Junte-se a nós</li>
+                        <li class="nav-botao" onclick="scrollToSection('quemsomos')">Quem somos</li>
+                        <li class="nav-botao" onclick="scrollToSection('wvw')">WvW</li>
+                        <li class="nav-botao" onclick="scrollToSection('juntese')">Junte-se a nós</li>
                         <li class="nav-icon">
                             <a href="https://www.youtube.com/@dragonsofdraezor" target=”_blank”><img src="css/imgs/yt_logo.png" alt="" class="logo-yt"></a>
                         </li>
@@ -40,31 +42,88 @@
                 </nav>
 
                 <div class="texto-conteudo-home">
-                    <h1> A MAIOR GUILDA BRASILEIRA DE WVW DO GW2™!</h1>
-                    <p>Criada em meados de 2020, a guilda Dragons Of Draezor [DD] surgiu com o objetivo de unir os brasileiros que são apaixonados pelo pvp em grande escala. Venha fazer parte da maior guilda brasileira no WvW do Guild Wars 2. Recrutamento aberto, aceitamos novatos e experientes.</p>
+                    <h1> A MAIOR GUILDA BRASILEIRA DE WVW!</h1>
+                    <p>Criada em meados de 2020, a guilda Dragons Of Draezor [DD] surgiu com o objetivo de unir os brasileiros que são apaixonados pelo pvp em grande escala. Venha fazer parte da maior guilda brasileira de WvW no Guild Wars 2. Recrutamento aberto, aceitamos novatos e experientes.</p>
                 </div>
 
                 <div class="botoes">
-                    <div class="botao-facaparte">FAÇA PARTE DA DD HOJE MESMO!</div>
+                    <div class="botao-facaparte" onclick="redirectToURL()">FAÇA PARTE DA DD HOJE MESMO!</div>
                     <div class="botao-saibamais"> SAIBA MAIS</div>
                 </div>
             </div>
 
-            <div class="container cont-1">
-
+            <!-- Quem é a DD -->
+            <div id="quemsomos" class="container cont-1">
+                <div class="content1 pad-format">
+                    <h1 class="title-content">Quem é a DD</h1>
+                    <p class="text-content">A Dragons Of Draezor é uma guilda bem estruturada e casual, na qual prioriza o bom relacionamento e o respeito entre todos os associados, criada para jogadores brasileiros. Os Líderes da Guilda, o staff administrativo e membros auxiliares estão constantemente auxiliando os associados, e dentro das possibilidades, sempre há alguém online com o intuito de ajudar a completar conteúdo do jogo, quer seja PvE, PvP ou WvW.</p>
+                </div>
             </div>
 
-            <div class="container cont-2"></div>
+            <!-- World VS World -->
+            <div id="wvw" class="container cont-2">
+                <div class="pad-format flex-end">
+                    <h1 class="title-content">World VS World</h1>
+                    <p class="text-content">O foco principal da guilda é WvW, para jogar conosco é preciso estar dentro da composição da DD, ou seja, utilizar as classes que fazem parte da "comp", nossas composições são criadas especificamente para o nosso estilo de jogo. Para isso disponibilizamos video aulas sobre as classes utilizadas na comp, treinos e VOD-Reviews semanais.
+                    </p>
+                    <p class="text-content">Corremos 4 vezes por semana: Seg, Quarta e Sáb (20:30), Sexta (22:45)</p>
+                </div>
+            </div>
 
-            <div class="container cont-3"></div>
+            <!-- Junte-se a nós -->
+            <div id="juntese" class="container cont-3">
+                <div class="pad-format">
+                    <h1 class="title-content">Junte-se a nós</h1>
+                    <p class="text-content">Recrutamos jogadores novatos e experientes que estejam dispostos a aprender, evoluir no WvW e jogar em composição com a maior guilda Brasileira do Guild Wars 2. Se voçe é um jogador que gosta de jogar em grupo e preza por uma boa organização e respeito, faça parte da hoje mesmo da DD.</p>
+                    <!-- <p class="text-content">O recrutamento é feito inteiramente pelo Discord.</p> -->
+                    <div class="btn-cont-3">
+                        <a href="https://discord.gg/mUxBxHUzyq" target=”_blank” style="text-decoration: none; color: inherit;">
+                            <div class="botao-facaparte">RECRUTAMENTO PELO DISCORD</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
 
-            <div class="container cont-4"></div>  
+            <!-- STAFF -->
+            <div class="container cont-4 flex-end">
+                <div class="pad-format">
+                    <h1 class="title-content">Conheça a STAFF</h1>
+                </div>
+                <div class="staff">
+                    <h2 class="guildleaders">Guild Líder</h2>
+                    <p class="staff-text">Jacques, Angus, Taz e Antimago.</p>
+                    <br>
+                    <h2 class="commanders">Commanders</h2>
+                    <p class="staff-text"> Aegis, Todou, Fissuris e Taz.</p>
+                    <div class="btn-cont-4">
+                        <a href="https://discord.gg/mUxBxHUzyq" target=”_blank” style="text-decoration: none; color: inherit;">
+                            <div class="botao-saibamais">SAIBA MAIS</div>
+                        </a>
+                    </div>
+                </div>
+            </div>  
         </div>
     </main>
+    <!-- <img class="dd-logo" src="css/imgs/dd_logo_semfundo.png" alt=""> -->
     <footer id="footer">
-        <div class="logo">
-            <img class="dd-logo" src="css/imgs/dd_logo_semfundo.png" alt="">
+        <div class="upper">
+            <p>YOUTUBE<br>
+            FACEBOOK<br>
+            INTAGRAM</P>
+            <p>SOBRE NÓS<br>
+            WORLD VS WORLD</p>
+            <p>JUNTE-SE A DD<br>
+            STAFF </p>
+        </div>
+        <div class="lower">
+            <div class="copyright">
+                <p>Made by Hondachi</p>
+                <p>&copyCopyright None rights reserved </p>
+            </div>    
         </div>
     </footer>
+  
+    <!-- -------- SCRIPT -------- -->
+    <script src="script.js"></script>
 </body>
 </html>
