Fixed img not showing git pages - retirado '/' do caminho das imgs

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>    
         </div>
     </footer>
-    <button id="back-to-top" class="back-to-top-btn" aria-label="Voltar ao topo"><img src="/css/icons/alinhar-topo.png" alt=""></button>
+    <button id="back-to-top" class="back-to-top-btn" aria-label="Voltar ao topo"><img src="css/icons/alinhar-topo.png" alt=""></button>
     <!---------- MODAL ---------->
     <div id="myModal" class="modal">
         <img class="modal-dd-logo" src="css/imgs/dd_logo_semfundo.png" alt="">
