--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dragons Of Draezor</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="css/imgs/dd_logo_semfundo.png" type="image/x-ixcon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--icone do github no footer-->
